--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "angular-seed",
+  "name": "commitmnt",
   "private": true,
   "version": "0.0.0",
-  "description": "A starter project for AngularJS",
-  "repository": "https://github.com/angular/angular-seed",
+  "description": "A tool for keeping track of and reaching your goals",
+  "repository": "https://github.com/kevin-lin/commitmnt",
   "license": "MIT",
   "devDependencies": {
     "karma": "~0.10",
