--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "description": "A tool for keeping track of and reaching your goals",
   "repository": "https://github.com/kevin-lin/commitmnt",
   "license": "MIT",
+  "dependencies": {
+    "bower": "^1.3.1"
+  },
   "devDependencies": {
     "karma": "~0.10",
     "protractor": "~0.20.1",
