--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "repository": "https://github.com/kevin-lin/commitmnt",
   "license": "MIT",
   "dependencies": {
-    "bower": "^1.3.1"
+    "bower": "^1.3.1",
+    "express": "3.x"
   },
   "devDependencies": {
     "karma": "~0.10",
@@ -20,7 +21,7 @@
     "postinstall": "bower install",
 
     "prestart": "npm install",
-    "start": "http-server -a localhost -p 8000",
+    "start": "node web.js",
 
     "pretest": "npm install",
     "test": "karma start test/karma.conf.js",
