--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
-  "name": "angular-seed",
-  "description": "A starter project for AngularJS",
+  "name": "commitmnt",
+  "description": "A tool for keeping track of and reaching your goals",
   "version": "0.0.0",
-  "homepage": "https://github.com/angular/angular-seed",
+  "homepage": "https://github.com/kevin-lin/commitmnt",
   "license": "MIT",
   "private": true,
   "dependencies": {
