--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,9 @@
     "angular-route": "1.2.x",
     "angular-loader": "1.2.x",
     "angular-mocks": "~1.2.x",
-    "html5-boilerplate": "~4.3.0"
+    "html5-boilerplate": "~4.3.0",
+    "bootstrap": "~3.2.0",
+    "fontawesome": "~4.1.0",
+    "animate.css": "~3.1.1"
   }
 }
