--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "html5-boilerplate": "~4.3.0",
     "bootstrap": "~3.2.0",
     "fontawesome": "~4.1.0",
-    "animate.css": "~3.1.1"
+    "animate.css": "~3.1.1",
+    "angularfire": "~0.7.1"
   }
 }
